# legal-rag-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_api_local.py  run_frontend.py  run_ingestion.py
src/api/: main.py  rag_chain.py
src/frontend/: app.py
src/ingestion/: document_loader.py  embeddings_and_pinecone.py
src/legal_rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: config.py  logging.py
tests/: test_api.py  test_document_loader.py  test_embeddings.py  test_rag_chain.py  test_rag_chain_full.py
