[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-chatbot"
version = "0.1.0"
description = "Asistente legal argentino con RAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Lucas", email = "tuemail@ejemplo.com"}]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.35.0",
    "pinecone>=6.0.0",
    "fastembed>=0.3.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pre-commit"]
